umol-io/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_1247_CNC1=NC=NC2=C1N=CN2_413b.smiles.snap
---
source: umol-io/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles
category: opensmiles
opensmiles:
  success: true
  summary:
    sum_formula: C6N5
    atom_count: 11
    bond_count: 12
